
syntax = "proto3";

import "base_grpc_service.proto";

option java_multiple_files = true;
option java_package = "com.alibaba.nacos.naming.grpc";

message GrpcInstance {
    string name = 1;
}

service NamingService {

    rpc registerInstance(GrpcInstance) returns (GrpcResponse) {}

    rpc deregisterInstance(GrpcInstance) returns (GrpcResponse) {}

    rpc queryInstances(GrpcQuery) returns (GrpcResource) {}
}
